# ShapeSearch

./: CMakeLists.txt  README.md  smartModels
geomeng/src/: CMakeLists.txt  Source.cpp
stlparser/: stlparser.cpp
stlparser/src/: CMakeLists.txt  stl.cpp  stla_io.h  stlparser.h
